# UniversalVSMCP

./: .gitignore  .tags  LICENSE  PRE-RELEASE-v26.2.0-RC1.md  README.md  README.zh.md  REGISTRY.md  RELEASE-NOTE-v26.2.0-rc3.md  UPDATE_SUMMARY.md  config_templates.py  pyproject.toml  requirements.txt  server.json
docs/: ROADMAP.md  Security-Audit-Report.md  Unified-Architecture.md  VS2026-QuickStart.md  VSC-Architecture.md  VSCode-Extension-Architecture.md
src/UniversalVSMCP/: BuildTools.cs  DebugTools.cs  DiagnosticTools.cs  FileLogger.cs  FileTools.cs  HttpServer.cs  McpModels.cs  Program.cs  ProjectTools.cs  SolutionTools.cs  UniversalVSMCP.csproj  VsConnectionManager.cs
src/UniversalVSMCP/Configuration/: ConfigurationManager.cs
src/UniversalVSMCP/IdeAbstraction/: IIdeAdapter.cs
src/UniversalVSMCP/IdeAdapters/: VsCodeAdapter.cs  VsDteAdapter.cs
src/UniversalVSMCP/IdeRouting/: IdeRouter.cs
src/UniversalVSMCP/Security/: AuthenticationMiddleware.cs  OperationAuditor.cs  PromptInjectionDetector.cs  SecureExecutionContext.cs  ToolPermissionManager.cs  UserConfirmation.cs  WorkspaceTrust.cs
src/UniversalVSMCP/Tools/: BuildTools.cs  DebugTools.cs  DiagnosticTools.cs  ExtensionTools.cs  FileTools.cs  ProjectTools.cs  SolutionTools.cs
src/UniversalVSMCP/nupkg/: UniversalVSMCP.1.0.0.nupkg
tests/: test_core.py
vscode-extension/: README.md
